# arabarenaai.com

./: .env.example  .gitignore  API_SPEC.md  ARCHITECTURE.md  COMPLETE_FOLDER_STRUCTURE.md  DATABASE_SCHEMA.md  DEPLOYMENT.md  ENV_CHECKLIST.md  Makefile  OBSERVABILITY.md  PRODUCTION_READINESS.md  PROJECT_AUDIT.md  PROJECT_CONTEXT.md  README.md  ROADMAP.md  desktop.ini  docker-compose.yml  render.yaml  test-comparison.json  test-gemini.json  tom domain cors
backend/: .env.example  .env.production.example  Dockerfile  alembic.ini  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/agents/: README.md
backend/app/analytics/: __init__.py  cache.py  serializers.py  service.py
backend/app/api/: router.py
backend/app/core/: admin_auth.py  config.py  database.py  dependencies.py  exceptions.py  maintenance.py  middleware.py  security.py  session_tokens.py  startup_patches.py
backend/app/domain/: attachments.py  categories.py  comparison.py  model_pricing.py  targets.py  voting.py
backend/app/models/: __init__.py  agent.py  base.py  category.py  comparison.py  model.py  platform_setting.py  prompt.py  provider.py  response.py  session_presence.py  upload.py  user.py  vote.py
backend/app/observability/: __init__.py  logging_config.py  metrics.py
backend/app/providers/: adapters.py  base.py  circuit_breaker.py  errors.py  multimodal.py  openai_utils.py  registry.py
backend/scripts/: add_model_registry_fields.sql  add_platform_settings.sql  add_session_presence.sql  add_uploads.sql  start-production.sh  test_openai_provider.py
database/: README.md
(+187 files in other folders)
